--- a/index.html
+++ b/index.html
@@ -6,46 +6,138 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eat-healthy-main</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:ital@1&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <section>
-        <div>
-            <h1><span style="color:tomato">Skip</span> The Diet, </h1>
 
-            <h1>Eat Healthy </h1>
+    <section>
+
+        <div class="half-width">
+
+            <h1><span style="color: tomato;">Skip</span> The Diet, </h1>
+
+            <h1> Just Eat Healthy </h1>
 
             <h1>With Food Network</h1>
 
-            <p>Imagine you don't need a diet because we provide</p>
+            <p>Imagine you don't need a diet because we provide <br>
 
-            <p>healthy and delicious food for you!</p>
+                healthy and delicious food for you!</p>
 
-            <a href="https://www.foodpanda.com.bd/" target="_blank">Order Now</a>
-
-        </div>
-
-        <div>
+            <a class="link-button" href="https://www.foodpanda.com.bd/" target="_blank">Order Now</a>
 
         </div>
+
+        <div class="half-width">
+            <img src="images/male/Hero Image.jpg" alt="">
+        </div>
+
     </section>
+
+
+    <section class="about-me">
+
+        <div class="half-width">
+            <img class="me" src="images/female/Person Image.png" alt="">
+        </div>
+
+        <div class="half-width">
+
+            <h1>About me</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quos, laboriosam ipsam necessitatibus
+                reiciendis id iste aliquid quo, at repudiandae, sit animi cum blanditiis nobis quae maiores deserunt?
+                Magni, cum.</p>
+
+            <a class="link-button" href="https://www.foodpanda.com.bd/" target="_blank">Contact Me</a>
+
+        </div>
+
+    </section>
+
+    <div id="recipies">
+
+        <h1>My recipies</h1>
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s.
+        </p>
+    </div>
+
 
     <section>
-        <div>
 
+        <div class="half-width">
+            <img src="images/food/Project Cover1.jpg" alt="">
+
+            <h2>recipies item</h2>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut totam sint asperiores error voluptatem
+                blanditiis accusantium quaerat, ea perferendis impedit numquam provident vel animi praesentium nesciunt
+                ipsa consequuntur autem atque.</p>
+        </div>
+
+        <div class="half-width">
+            <img src="images/food/Project Cover1.jpg." alt="">
+
+            <h2>recipies item</h2>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis recusandae, fugiat
+                dignissimos aliquam et neque eveniet sunt odio, tempora ex numquam fuga at rerum odit, culpa laudantium
+                aliquid exercitationem.</p>
 
         </div>
 
-        <div>
-
-        </div>
 
     </section>
 
+
+
+    <section>
+
+
+        <div class="follow">
+            <div class="half-width">
+
+                <h1>700k</h1>
+
+                <p>Youtube Subscribers</p>
+
+            </div>
+
+            <div class="half-width">
+
+                <h1>2.5m</h1>
+
+                <p>nstagram Followers</p>
+
+            </div>
+
+            <div class="half-width">
+                <h1>100k</h1>
+
+                <p>Dribbble Shot Likes</p>
+
+            </div>
+        </div>
+
+    </section>
 
 
 </body>
+
+<footer>
+
+    <h3>Eat Fresh</h3>
+
+    <p>at healthy to live healthy. Live healthy to live happy.</p>
+
+</footer>
 
 </html>
