--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
 
-
+    <!--1st part-->
     <section>
 
-        <div class="half-width">
+        <div id="top" class="half-width">
 
             <h1><span style="color: tomato;">Skip</span> The Diet, </h1>
 
@@ -40,14 +40,15 @@
 
     </section>
 
+    <!--2nd part-->
 
     <section class="about-me">
 
         <div class="half-width">
-            <img class="me" src="images/female/Person Image.png" alt="">
+            <img class="me" src="images/female/Group 8425.png" alt="">
         </div>
 
-        <div class="half-width">
+        <div class="half-width me-2">
 
             <h1>About me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quos, laboriosam ipsam necessitatibus
@@ -60,6 +61,8 @@
 
     </section>
 
+    <!--My recipies-->
+
     <div id="recipies">
 
         <h1>My recipies</h1>
@@ -70,23 +73,24 @@
         </p>
     </div>
 
+    <!--My recipies item-->
 
-    <section>
+    <section class="recipies-item">
 
-        <div class="half-width">
+        <div class="half-width item">
             <img src="images/food/Project Cover1.jpg" alt="">
 
-            <h2>recipies item</h2>
+            <h2>Recipies item</h2>
 
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut totam sint asperiores error voluptatem
                 blanditiis accusantium quaerat, ea perferendis impedit numquam provident vel animi praesentium nesciunt
                 ipsa consequuntur autem atque.</p>
         </div>
 
-        <div class="half-width">
+        <div class="half-width item">
             <img src="images/food/Project Cover1.jpg." alt="">
 
-            <h2>recipies item</h2>
+            <h2>Recipies item</h2>
 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis recusandae, fugiat
                 dignissimos aliquam et neque eveniet sunt odio, tempora ex numquam fuga at rerum odit, culpa laudantium
@@ -97,35 +101,33 @@
 
     </section>
 
+    <!--lsat part-->
 
+    <section class="follow">
 
-    <section>
+        <div class="half-width">
 
+            <h1>700k</h1>
 
-        <div class="follow">
-            <div class="half-width">
+            <p>Youtube Subscribers</p>
 
-                <h1>700k</h1>
-
-                <p>Youtube Subscribers</p>
-
-            </div>
-
-            <div class="half-width">
-
-                <h1>2.5m</h1>
-
-                <p>nstagram Followers</p>
-
-            </div>
-
-            <div class="half-width">
-                <h1>100k</h1>
-
-                <p>Dribbble Shot Likes</p>
-
-            </div>
         </div>
+
+        <div class="half-width">
+
+            <h1>2.5m</h1>
+
+            <p>nstagram Followers</p>
+
+        </div>
+
+        <div class="half-width">
+            <h1>100k</h1>
+
+            <p>Dribbble Shot Likes</p>
+
+        </div>
+
 
     </section>
 
